# MusiCue

./: .env.example  .gitignore  DESIGN.md  FOLLOWUPS.md  LICENSE  README.md  install.bat  pyproject.toml  run.bat  start-ui.bat
docs/specs/: 2026-05-10-v0.2a-frame-timecode.md  2026-05-10-v0.2b-editorial-exports.md  2026-05-10-v0.2c-beat-patterns.md
grammars/: concert_visuals.yaml
musicue/: __init__.py  __main__.py  cache.py  cli.py  config.py  diff.py  frame_population.py  inspect.py  listen.py  schemas.py  timecode.py
musicue/analysis/: clap_reranker.py  curves.py  drum_classifier.py  onsets.py  patterns.py  peaks.py  phrases.py  pipeline.py  separation.py  structure.py  transcription.py  transitions.py
musicue/compile/: bundle.py  cedartoy_folder.py  compiler.py  envelopes.py  grammar.py  scoring.py
musicue/exporters/: _common.py  _editorial.py  aftereffects.py  csv.py  disguise.py  edl.py  fcpxml.py  houdini.py  json_export.py  midi.py  osc.py  premiere_markers.py  resolve_markers.py  touchdesigner.py  unreal.py
musicue/grammars/: camera_edit.yaml  character_animation.yaml  concert_visuals.yaml  lighting.yaml
musicue/health/: __main__.py  models.py  probes.py  readiness.py
musicue/index/: __init__.py  cli.py  index.py  query.py  schema.py
musicue/ui/: ingest.py  jobs.py  runner.py  server.py  storage.py
prompt_banks/: default_clap_prompts.yaml
scripts/: benchmark.py  bootstrap.ps1  capture_export_modal.py  capture_screenshots.py  capture_tooltip.py  capture_v0.2a_screenshots.py  capture_v0.2b_screenshots.py  fetch_models.py  install_ffmpeg.ps1  make_qc_video.py  seed_ui_from_bench.py  setup_env.ps1  setup_env.py  summarize_benchmark.py  train_drum_classifier.py
tests/: conftest.py  test_ae_exporter.py  test_analysis.py  test_bundle_builder.py  test_bundle_cli.py  test_bundle_schema.py  test_cache.py  test_cedartoy_folder.py  test_clap_reranker.py  test_cli.py  test_compile.py  test_config.py  test_diff.py  test_disguise_exporter.py  test_drum_classifier.py  test_editorial_exporters.py  test_exporters.py  test_fetch_models.py  test_frame_population.py  test_grammar.py  test_health_cli.py  test_health_models.py  test_health_probes.py  test_health_readiness.py  test_houdini_exporter.py  test_index_cli.py  test_index_query.py  test_index_schema.py  test_index_walk.py  test_index_writethrough.py  test_ingest_thumbnail_ssrf.py  test_inspect.py  test_jobs_terminal_state.py  test_listen.py  test_midi_exporter.py  test_osc_exporter.py  test_pattern_filters.py  test_patterns.py  test_peaks.py  test_phrases.py  (+33 more)
tests/fixtures/: sample.musicue.json
(+54 files in other folders)
