[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musicue"
version = "0.1.0"
description = "Convert songs into typed event timelines for DCC tools"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2,<3",
    "torchaudio>=2.2,<3",
    "demucs>=4.0",
    "librosa>=0.10",
    "pyloudnorm>=0.1.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "soundfile>=0.12",
    "soxr>=0.3",
]

[project.scripts]
musicue = "musicue.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "pyright>=1.1", "matplotlib>=3.8", "mido>=1.3", "python-osc>=1.8"]
models = ["allin1", "basic-pitch"]
clap = ["laion-clap"]
midi = ["mido>=1.3"]
osc = ["python-osc>=1.8"]
ui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["musicue"]
include = ["musicue/grammars/*.yaml"]

[tool.hatch.build.targets.sdist]
include = ["musicue/grammars/*.yaml", "prompt_banks/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -m 'not integration'"
markers = ["integration: marks tests that require real model inference (slow)"]
asyncio_mode = "auto"
